fix weird z-index issuew with the contact social links

--- a/src/Contact/Contact.css
+++ b/src/Contact/Contact.css
@@ -47,6 +47,7 @@
 }
 
 .social {
+  z-index: -1;
   font-size: 0.8em;
   display: flex;
   align-items: center;
