--- a/src/NavigationModal/NavigationModal.css
+++ b/src/NavigationModal/NavigationModal.css
@@ -1,12 +1,12 @@
 .modal {
   display: flex;
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   left: 0;
   top: 0;
   width: 100vw;
   height: 100vh;
-  overflow: auto;
+  overflow: hidden;
   align-items: center;
   justify-content: center;
   background-color: #fff;
